# Morecmath

./: .gitignore  README.md
mathFuncs/: CMakeLists.txt  conanfile.py  funcs.cpp  funcs.hpp  install.sh
